--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <form>
+    <form name="contact" method="POST" data-netlify="true">
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email Address" required>
         <input type="tel" name="phone_num" placeholder="(860) 712-5122" 
