--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email Address" required>
         <input type="tel" name="phone_num" placeholder="(860) 712-5122" 
-        pattern="[\(]\d{3][\)\]\d{3}[\-]\d{4}" required>
+        pattern="[\(]\d{3][\)\]\d{3}[\-]\d{4}">
          <!-- <textarea name="" id="" cols="30" rows="10"></textarea> -->
         <textarea name="message" placeholder="Your Message"></textarea>
         <button type="submit">Submit</button>
